Fix shadow z-index

--- a/app/[locale]/results/components/ResultsTable/ResultsTable.module.scss
+++ b/app/[locale]/results/components/ResultsTable/ResultsTable.module.scss
@@ -10,7 +10,7 @@
     top: 0;
     bottom: 0;
     width: 16%;
-    z-index: 20;
+    z-index: 5;
     transition: opacity 0.2s;
     margin-block: 3rem;
     pointer-events: none;
